[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/blob_particle.png" type="Texture" id=1]
[ext_resource path="res://Assets/blob_eye.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Blob.gd" type="Script" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.420455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.5
angle = 720.0
angle_random = 0.5
scale_curve = SubResource( 2 )
color = Color( 0.0666667, 0.027451, 0.027451, 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 2 )

[sub_resource type="SphereShape" id=8]
radius = 1.5

[sub_resource type="SphereShape" id=9]
radius = 1.5

[node name="Blob" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Particles" type="Particles" parent="."]
amount = 128
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="LeftEye" type="MeshInstance" parent="."]
transform = Transform( -0.999999, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -0.999999, 0.4, 0, -1 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="OmniLight" type="OmniLight" parent="LeftEye"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.315193 )
light_color = Color( 0.968627, 1, 0.345098, 1 )
light_energy = 0.1

[node name="RightEye" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 6.51682e-07, 0, 1, 0, -6.51682e-07, 0, 1, -0.4, 0, -1 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="OmniLight" type="OmniLight" parent="RightEye"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98023e-08, 0, -0.134778 )
light_color = Color( 0.968627, 1, 0.345098, 1 )
light_energy = 0.1

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 8 )

[node name="HitArea" type="Area" parent="." groups=[
"enemy",
]]

[node name="CollisionShape" type="CollisionShape" parent="HitArea"]
shape = SubResource( 9 )

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RushTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
[connection signal="timeout" from="RushTimer" to="." method="_on_RushTimer_timeout"]
